<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, SampleCalculatorActivity!</string>
    <string name="app_name">SampleCalculator</string>
    <string name="One">1</string>
	<string name="two">2</string>
	<string name="three">3</string>
	<string name="four">4</string>
	<string name="five">5</string>
	<string name="six">6</string>
	<string name="seven">7</string>
	<string name="eight">8</string>
	<string name="nine">9</string>
	<string name="zero">0</string>
	
	<string name="dot">.</string>
	<string name="eq">=</string>
	
	<string name="plus">+</string>
	<string name="min">-</string>
	<string name="mul">*</string>
	<string name="div">/</string>
	
	<string name="hist">HIST</string>
	<string name="del">DEL</string>
	<string name="ac">AC</string>
	
	<string name="m">MRC</string>
	<string name="mp">M+</string>
	<string name="mm">M-</string>
	<string name="mc">MC</string>
	
	<string name="back">Back</string>

</resources>